<resources>

    <string name="app_name">Alpha Store</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Reset">Reset</string>
    <string name="Category">Category</string>
    <string name="Item_name">Item name</string>
    <string name="Quantity">Quantity</string>
    <string name="Description">Description</string>
    <string name="Select_Image">Select Image</string>
    <string name="Submit">Submit</string>
    <string name="Add_Product">Add Product</string>
    <string name="Delivery_Details">Delivery Details</string>
    <string name="Proceed_To_Payment">Proceed To Payment</string>
    <string name="name">Name</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="Postal_Code">Postal Code</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="time">13:58</string>
    <string name="My_Account">My Account</string>
    <string name="Gihan_Jayaweera">ABC</string>
    <string name="Address">Address</string>
    <string name="addressValue">Karachi</string>
    <string name="ContactNo">Contact Number</string>
    <string name="contactVal">0764536363</string>
    <string name="User_Name">User Name</string>
    <string name="GihanJ">XYZ</string>
    <string name="Email">Email</string>
    <string name="emailval">gihanhshxs@gmail.com</string>
    <string name="PasswordVal">jyuh123</string>
    <string name="Password">Password</string>
    <string name="Update_Order">Update Order</string>
    <string name="Amount">Amount</string>
    <string name="postalval">10230</string>
    <string name="qty">100</string>
    <string name="amountVal">1000</string>
    <string name="Delete">Delete</string>
    <string name="Transistors">Lipstick</string>
    <string name="imgPath">producta.jpg</string>
    <string name="product1">Kylie lipgloss</string>
    <string name="Itemn">Item Name</string>
    <string name="dDescription">Description</string>
    <string name="Change_Image">Change Image</string>
    <string name="Update_Product">Update Product</string>
    <string name="LEDs">LEDs</string>
    <string name="Mascara">Transistors</string>
    <string name="Contour">Drivers</string>
    <string name="Edit_Account">Edit Account</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="Orders">Orders</string>
    <string name="newarrival">New Arrival</string>
    <string name="Cancel_Order">Cancel Order</string>
    <string name="Holder_Name">Holder Name</string>
    <string name="cardNo">1234123412341234</string>
    <string name="Card_Number">Card Number</string>
    <string name="Expiry_Date">Expiry Date(Month/Year -> 03/21)</string>
    <string name="dt">Year/Month</string>
    <string name="CVV">CVV </string>
    <string name="Complete_Order">Complete Order</string>
    <string name="Card_Type">Card Type</string>
    <string name="Card_Payments">Card Payments</string>
    <string name="Payment_Details">Payment Details</string>
    <string name="Payment_Method">Payment Method</string>
    <string name="Cash_On_Delivery">Cash On Delivery</string>
    <string name="Add_Item">Add Item</string>
    <string name="My_Cart">My Cart</string>
    <string name="Select_all">Select all</string>
    <string name="cartVal">Rs.1000.00</string>
    <string name="Orange">Kylie lip gloss</string>
    <string name="orangeVal">Rs.1000.00</string>
    <string name="Banana">Kylie Contour Kit</string>
    <string name="Checkout">Checkout</string>
    <string name="Sign_In">Sign In</string>
    <string name="forgot">Forgot Password</string>
    <string name="signUp">Not a Member?  Sign Up</string>
    <string name="cPassword">Confirm Password</string>
    <string name="Sign_Up2">Sign Up</string>
    <string name="intro">Shop Smart</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Add_To_Cart">Add To Cart</string>
    <string name="Buy_Now">Buy Now</string>
    <string name="Edit_Item">Edit Item</string>
    <string name="Home">Home</string>
    <string name="Shopping_Cart">Shopping Cart</string>
    <string name="Edit_Product">Edit Product</string>
    <string name="Other">Other</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="Share">Share</string>
    <string name="Log_Out">Log Out</string>
    <string name="Total">Total Rs.</string>
    <string name="Cart_Total">100</string>
    <string name="Name">Name</string>
    <string name="DT">Date and Time</string>
    <string name="EditOrderBreadcrumb">Orders/Update order</string>
    <string name="OrderId">Order Id</string>
    <string name="OrderTime">Order Time</string>
    <string name="OrderConfirmation">Order Placed Successful!</string>
    <string name="OrderConfirmContent">Your order will be reaching to the given address within an hour Please be present at the given address.</string>
    <string name="TextView">TextView</string>
    <string name="amount">100</string>
    <string name="product2">Madora Lipstick</string>
    <string name="product3">Kylie lipgloss classic</string>
    <string name="eyeproductsname">Eye Makeup</string>
    <string name="facemakeupname">Face Makeup</string>
    <string name="reviewtxt">Review:</string>
    <string name="addreview">Add Review</string>
    <string name="OrderName">Order Name</string>


</resources>
