<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/Home" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/account"
            android:title="@string/My_Account" />

        <item
            android:id="@+id/orders"
            android:icon="@drawable/orders"
            android:title="@string/Orders" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/cart"
            android:title="@string/Shopping_Cart" />


    </group>
    <item android:title="@string/Other">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/rate"
                android:icon="@drawable/rate"
                android:title="@string/Rate_Us" />

            <item
                android:id="@+id/share"
                android:icon="@drawable/share"
                android:title="@string/Share" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/Log_Out" />
            </group>
        </menu>
    </item>


</menu>