<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="40sp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        >
        
        <android.support.design.widget.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:hint="@string/User_Name"
            android:inputType="textPersonName"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="15sp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="15sp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="15sp"
            android:ems="10"
            android:hint="@string/cPassword"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/button_background"
        android:text="@string/Sign_Up2"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/reset"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/button_background"
        android:text="@string/Reset"
        android:textColor="@color/white" />


</LinearLayout>